# Portfolio

./: .gitignore  README.md  migrate.mjs
backend/: check_models.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  seed_knowledge.py  supabase_analytics.sql  supabase_pgvector.sql
backend/nemo_config/: config.yml  topical.co
backend/routes/: analytics.py  assistant.py  blog.py  contact.py  guestbook.py  settings.py
backend/tests/: conftest.py  test_contact.py  test_guestbook.py  test_settings.py
frontend/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIAssistant.tsx  Footer.tsx  GlobalEffects.tsx  Navbar.tsx  ProtectedRoute.tsx  SEO.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: resume.js  resume.json
frontend/src/hooks/: useAnalytics.ts
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: About.tsx  Admin.tsx  AdminBlog.tsx  AdminSettings.tsx  Blog.tsx  BlogPost.tsx  Contact.tsx  Experience.tsx  Guestbook.tsx  Home.tsx  Login.tsx  Projects.tsx  Skills.tsx
frontend/src/tests/: Guestbook.test.tsx  Home.test.tsx  setup.ts
