[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.1",
    "uvicorn>=0.48.0",
]
